# OpenVINO-optimization-for-PointPillars

./: 0001-implement-pointpillars-on-Intel-platform.patch  0001-pcl-1.12.0.patch  0004-add-pcl-and-yolo-app.patch  README.md
lidar-pcl/: CMakeLists.txt
lidar-pcl/src/: Box.hpp  EuclideanClusterExtraction.hpp  KDTree.hpp  PointCloudProcessor.hpp  Ransac.hpp  main.cpp
lidar-yolo/: 0001-yolo-object-detection-work-as-a-deamon.patch
openvino2021.4/: 0001-add-GPU.1-for-DG2.patch  0001-yolo-as-deamon-on-openVINO-2021.4.patch  0002-upadte-pfe-and-rpn-on-openvino2021.4.patch  README.md
tbb/: 0001-cluster-extraction-TBB.patch
